--- a/index.html
+++ b/index.html
@@ -50,29 +50,29 @@
         .filters select:focus{outline:none;border-color:#7c3aed;box-shadow:0 0 0 3px rgba(124,58,237,0.1)}
         .filters label{display:flex;align-items:center;gap:8px;font-size:14px;cursor:pointer;color:#475569;font-weight:500}
         .filters label input{width:18px;height:18px;accent-color:#7c3aed}
-        .grid{background:#fff;border-radius:16px;box-shadow:0 4px 12px rgba(0,0,0,0.08);border:1px solid #e2e8f0;position:relative;overflow:visible}
-        .grid-header{display:grid;grid-template-columns:2.5fr 0.7fr 0.9fr 0.9fr 1.2fr 1.3fr 1.1fr 40px;padding:16px 20px;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);font-size:12px;font-weight:700;color:#fff;text-transform:uppercase;letter-spacing:0.8px;border-bottom:none;gap:10px;position:sticky;top:0;z-index:10;border-radius:16px 16px 0 0;box-shadow:0 2px 8px rgba(102,126,234,0.3)}
-        .grid-header.billing{grid-template-columns:2.2fr 0.7fr 0.85fr 0.85fr 1fr 1fr 1.2fr 1fr 40px}
-        .grid-row{display:grid;grid-template-columns:2.5fr 0.7fr 0.9fr 0.9fr 1.2fr 1.3fr 1.1fr 40px;padding:16px 20px;border-bottom:1px solid #e2e8f0;align-items:center;cursor:pointer;gap:10px;position:relative;transition:all 0.15s ease}
-        .grid-row.billing{grid-template-columns:2.2fr 0.7fr 0.85fr 0.85fr 1fr 1fr 1.2fr 1fr 40px}
+        .grid{background:#fff;border-radius:16px;box-shadow:0 4px 12px rgba(0,0,0,0.08);border:1px solid #e2e8f0;position:relative;overflow:hidden}
+        .grid-header{display:grid;grid-template-columns:minmax(280px,1fr) 85px 100px 100px 145px 165px 125px 44px;padding:16px 20px;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);font-size:12px;font-weight:700;color:#fff;text-transform:uppercase;letter-spacing:0.8px;gap:12px;position:sticky;top:0;z-index:10;box-shadow:0 2px 8px rgba(102,126,234,0.3)}
+        .grid-header.billing{grid-template-columns:minmax(250px,1fr) 85px 95px 95px 115px 115px 155px 115px 44px}
+        .grid-row{display:grid;grid-template-columns:minmax(280px,1fr) 85px 100px 100px 145px 165px 125px 44px;padding:16px 20px;border-bottom:1px solid #e2e8f0;align-items:center;cursor:pointer;gap:12px;position:relative;transition:all 0.15s ease}
+        .grid-row.billing{grid-template-columns:minmax(250px,1fr) 85px 95px 95px 115px 115px 155px 115px 44px}
         .grid-row:nth-child(even){background:#f8fafc}
         .grid-row:hover{background:#ede9fe;box-shadow:inset 3px 0 0 #7c3aed}
-        .policy-cell{display:flex;gap:14px;align-items:flex-start;min-width:0}
+        .policy-cell{display:flex;gap:14px;align-items:flex-start;min-width:0;overflow:hidden}
         .policy-icon{width:46px;height:46px;border-radius:12px;display:flex;align-items:center;justify-content:center;font-size:20px;flex-shrink:0;box-shadow:0 3px 8px rgba(0,0,0,0.1)}
-        .policy-info{min-width:0;flex:1}
-        .policy-info h3{font-size:14px;font-weight:700;margin-bottom:4px;line-height:1.35;color:#1e293b}
-        .policy-info .meta{font-size:12px;color:#64748b;margin-bottom:3px}
-        .policy-info .carrier{font-size:12px;color:#0369a1;font-weight:600;margin-bottom:4px}
+        .policy-info{min-width:0;flex:1;overflow:hidden}
+        .policy-info h3{font-size:14px;font-weight:700;margin-bottom:4px;line-height:1.35;color:#1e293b;overflow:hidden;text-overflow:ellipsis}
+        .policy-info .meta{font-size:12px;color:#64748b;margin-bottom:3px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+        .policy-info .carrier{font-size:12px;color:#0369a1;font-weight:600;margin-bottom:4px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
         .policy-info .notes{font-size:12px;color:#047857;background:#d1fae5;padding:5px 12px;border-radius:8px;display:inline-block;max-width:100%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-weight:600;border:1px solid #6ee7b7;box-shadow:0 2px 4px rgba(16,185,129,0.15)}
         .due-cell{text-align:center;min-width:0}
         .trans-cell{text-align:center;min-width:0}
         .trans-badge{display:inline-block;padding:6px 12px;border-radius:8px;font-size:12px;font-weight:700;white-space:nowrap;box-shadow:0 2px 4px rgba(0,0,0,0.1)}
         .date-cell{font-size:13px;color:#334155;text-align:center;min-width:0;white-space:nowrap;font-weight:500}
-        .due-badge{display:inline-block;padding:6px 10px;border-radius:8px;font-size:11px;font-weight:700;white-space:nowrap;letter-spacing:0.3px;box-shadow:0 2px 4px rgba(0,0,0,0.1)}
-        .due-badge.past{background:#fee2e2;color:#b91c1c;box-shadow:0 2px 6px rgba(248,113,113,0.3)}
-        .due-badge.today{background:#fef3c7;color:#92400e;box-shadow:0 2px 6px rgba(251,191,36,0.3)}
-        .due-badge.soon{background:#dbeafe;color:#1e40af;box-shadow:0 2px 6px rgba(96,165,250,0.3)}
-        .due-badge.future{background:#f1f5f9;color:#475569;box-shadow:0 2px 4px rgba(148,163,184,0.2)}
+        .due-badge{display:inline-block;padding:6px 10px;border-radius:8px;font-size:11px;font-weight:700;white-space:nowrap;letter-spacing:0.3px;box-shadow:0 2px 4px rgba(0,0,0,0.1);border:none}
+        .due-badge.past{background:#fee2e2;color:#b91c1c;box-shadow:0 2px 6px rgba(248,113,113,0.3);border:none}
+        .due-badge.today{background:#fef3c7;color:#92400e;box-shadow:0 2px 6px rgba(251,191,36,0.3);border:none}
+        .due-badge.soon{background:#dbeafe;color:#1e40af;box-shadow:0 2px 6px rgba(96,165,250,0.3);border:none}
+        .due-badge.future{background:#f1f5f9;color:#475569;box-shadow:0 2px 4px rgba(148,163,184,0.2);border:none}
         .due-date{font-size:12px;color:#475569;margin-top:4px;font-weight:500}
         .status-cell{position:relative;min-width:0}
         .status-badge{display:inline-block;padding:8px 14px;border-radius:8px;font-size:12px;font-weight:700;cursor:pointer;white-space:nowrap;border:2px solid transparent;transition:all 0.15s;max-width:100%;overflow:hidden;text-overflow:ellipsis;box-shadow:0 2px 6px rgba(0,0,0,0.1)}
@@ -139,7 +139,7 @@
         .toast.show{display:block}
         .toast.ok{background:#059669}
         .toast.err{background:#dc2626}
-        @media(max-width:1400px){.grid-header,.grid-row{grid-template-columns:2.2fr 0.65fr 0.85fr 0.85fr 1.1fr 1.2fr 1fr 38px}.grid-header.billing,.grid-row.billing{grid-template-columns:2fr 0.65fr 0.8fr 0.8fr 0.95fr 0.95fr 1.1fr 0.95fr 38px}}
+        @media(max-width:1400px){.grid-header,.grid-row{grid-template-columns:minmax(220px,1fr) 80px 90px 90px 130px 150px 115px 40px}.grid-header.billing,.grid-row.billing{grid-template-columns:minmax(200px,1fr) 80px 85px 85px 105px 105px 140px 105px 40px}}
         @media(max-width:1200px){.stats{grid-template-columns:repeat(3,1fr)}}
     </style>
 </head>
