--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Version 15 - Fixed Grid Layout -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +8,7 @@
     <script src="https://alcdn.msauth.net/browser/2.38.0/js/msal-browser.min.js"></script>
     <style>
         *{margin:0;padding:0;box-sizing:border-box}
-        body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;background:#f0f2f5;font-size:15px;overflow-x:hidden}
+        body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;background:#f0f2f5;font-size:15px}
         .login-screen{display:flex;align-items:center;justify-content:center;min-height:100vh;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%)}
         .login-card{background:#fff;padding:60px;border-radius:20px;text-align:center;box-shadow:0 20px 60px rgba(0,0,0,0.3)}
         .login-card h1{font-size:28px;margin-bottom:12px;color:#333}
@@ -24,7 +25,7 @@
         .new-btn{background:#fff;color:#764ba2;border:none;padding:10px 20px;border-radius:10px;font-weight:600;cursor:pointer}
         .user-badge{display:flex;align-items:center;gap:10px;cursor:pointer;padding:6px 12px;border-radius:10px;background:rgba(255,255,255,0.15)}
         .user-badge .avatar{width:36px;height:36px;border-radius:50%;background:#fff;color:#764ba2;display:flex;align-items:center;justify-content:center;font-weight:700}
-        .main{padding:24px 32px;max-width:1900px;margin:0 auto;overflow-x:hidden}
+        .main{padding:24px 32px;max-width:1900px;margin:0 auto}
         .stats{display:grid;grid-template-columns:repeat(6,1fr);gap:20px;margin-bottom:28px}
         .stat{padding:24px;border-radius:16px;cursor:pointer;transition:all 0.2s;border:1px solid transparent}
         .stat:hover{transform:translateY(-3px);box-shadow:0 12px 30px rgba(0,0,0,0.15)}
@@ -50,41 +51,40 @@
         .filters select:focus{outline:none;border-color:#7c3aed;box-shadow:0 0 0 3px rgba(124,58,237,0.1)}
         .filters label{display:flex;align-items:center;gap:8px;font-size:14px;cursor:pointer;color:#475569;font-weight:500}
         .filters label input{width:18px;height:18px;accent-color:#7c3aed}
-        .grid{background:#fff;border-radius:16px;box-shadow:0 4px 12px rgba(0,0,0,0.08);border:1px solid #e2e8f0;position:relative;overflow:hidden;width:100%;display:block;table-layout:fixed}
-        #gridBody{display:block;width:100%}
-        .grid-header{display:grid;grid-template-columns:25% 7% 9% 9% 13% 15% 12% 40px;padding:16px 20px;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);font-size:12px;font-weight:700;color:#fff;text-transform:uppercase;letter-spacing:0.8px;gap:8px;position:sticky;top:0;z-index:10;box-shadow:0 2px 8px rgba(102,126,234,0.3);box-sizing:border-box}
-        .grid-header.billing{grid-template-columns:22% 6% 8% 8% 10% 10% 13% 10% 40px}
-        .grid-row{display:grid;grid-template-columns:25% 7% 9% 9% 13% 15% 12% 40px;padding:16px 20px;border-bottom:1px solid #e2e8f0;align-items:center;cursor:pointer;gap:8px;position:relative;transition:all 0.15s ease;box-sizing:border-box}
-        .grid-row.billing{grid-template-columns:22% 6% 8% 8% 10% 10% 13% 10% 40px}
+        .grid{background:#fff;border-radius:16px;box-shadow:0 4px 12px rgba(0,0,0,0.08);border:1px solid #e2e8f0;overflow:hidden}
+        .grid-header{display:grid;grid-template-columns:minmax(200px,1.5fr) 75px 90px 90px 130px 150px 110px 40px;padding:16px 20px;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);font-size:12px;font-weight:700;color:#fff;text-transform:uppercase;letter-spacing:0.8px;gap:8px}
+        .grid-header.billing{grid-template-columns:minmax(180px,1.5fr) 75px 85px 85px 105px 105px 140px 105px 40px}
+        .grid-row{display:grid;grid-template-columns:minmax(200px,1.5fr) 75px 90px 90px 130px 150px 110px 40px;padding:16px 20px;border-bottom:1px solid #e2e8f0;align-items:center;cursor:pointer;gap:8px}
+        .grid-row.billing{grid-template-columns:minmax(180px,1.5fr) 75px 85px 85px 105px 105px 140px 105px 40px}
         .grid-row:nth-child(even){background:#f8fafc}
         .grid-row:hover{background:#ede9fe;box-shadow:inset 3px 0 0 #7c3aed}
-        .policy-cell{display:flex;gap:12px;align-items:flex-start;min-width:0;overflow:hidden;max-width:100%}
+        .policy-cell{display:flex;gap:12px;align-items:flex-start;min-width:0}
         .policy-icon{width:42px;height:42px;border-radius:12px;display:flex;align-items:center;justify-content:center;font-size:18px;flex-shrink:0;box-shadow:0 3px 8px rgba(0,0,0,0.1)}
-        .policy-info{min-width:0;flex:1;overflow:hidden;max-width:100%}
-        .policy-info h3{font-size:13px;font-weight:700;margin-bottom:4px;line-height:1.35;color:#1e293b;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
-        .policy-info .meta{font-size:12px;color:#64748b;margin-bottom:3px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
-        .policy-info .carrier{font-size:12px;color:#0369a1;font-weight:600;margin-bottom:4px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+        .policy-info{min-width:0;flex:1}
+        .policy-info h3{font-size:13px;font-weight:700;margin-bottom:4px;line-height:1.35;color:#1e293b}
+        .policy-info .meta{font-size:12px;color:#64748b;margin-bottom:3px}
+        .policy-info .carrier{font-size:12px;color:#0369a1;font-weight:600;margin-bottom:4px}
         .policy-info .notes{font-size:12px;color:#047857;background:#d1fae5;padding:5px 12px;border-radius:8px;display:inline-block;max-width:100%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-weight:600;border:1px solid #6ee7b7;box-shadow:0 2px 4px rgba(16,185,129,0.15)}
-        .due-cell{text-align:center;min-width:0;overflow:hidden}
-        .trans-cell{text-align:center;min-width:0;overflow:hidden}
+        .due-cell{text-align:center}
+        .trans-cell{text-align:center}
         .trans-badge{display:inline-block;padding:5px 10px;border-radius:8px;font-size:11px;font-weight:700;white-space:nowrap;box-shadow:0 2px 4px rgba(0,0,0,0.1)}
-        .date-cell{font-size:12px;color:#334155;text-align:center;min-width:0;white-space:nowrap;font-weight:500;overflow:hidden}
+        .date-cell{font-size:12px;color:#334155;text-align:center;white-space:nowrap;font-weight:500}
         .due-badge{display:inline-block;padding:6px 10px;border-radius:8px;font-size:11px;font-weight:700;white-space:nowrap;letter-spacing:0.3px;box-shadow:0 2px 4px rgba(0,0,0,0.1);border:none}
         .due-badge.past{background:#fee2e2;color:#b91c1c;box-shadow:0 2px 6px rgba(248,113,113,0.3);border:none}
         .due-badge.today{background:#fef3c7;color:#92400e;box-shadow:0 2px 6px rgba(251,191,36,0.3);border:none}
         .due-badge.soon{background:#dbeafe;color:#1e40af;box-shadow:0 2px 6px rgba(96,165,250,0.3);border:none}
         .due-badge.future{background:#f1f5f9;color:#475569;box-shadow:0 2px 4px rgba(148,163,184,0.2);border:none}
         .due-date{font-size:12px;color:#475569;margin-top:4px;font-weight:500}
-        .status-cell{position:relative;min-width:0;overflow:hidden}
-        .status-badge{display:inline-block;padding:6px 10px;border-radius:8px;font-size:11px;font-weight:700;cursor:pointer;white-space:nowrap;border:2px solid transparent;transition:all 0.15s;max-width:100%;overflow:hidden;text-overflow:ellipsis;box-shadow:0 2px 6px rgba(0,0,0,0.1)}
+        .status-cell{position:relative}
+        .status-badge{display:inline-block;padding:6px 10px;border-radius:8px;font-size:11px;font-weight:700;cursor:pointer;white-space:nowrap;border:2px solid transparent;transition:all 0.15s;box-shadow:0 2px 6px rgba(0,0,0,0.1)}
         .status-badge:hover{transform:scale(1.05);box-shadow:0 4px 12px rgba(0,0,0,0.15)}
         .status-dd{position:fixed;background:#fff;border:1px solid #e5e7eb;border-radius:12px;box-shadow:0 10px 40px rgba(0,0,0,0.15);z-index:1000;min-width:200px;max-height:350px;overflow-y:auto;display:none}
         .status-dd.open{display:block}
         .status-opt{padding:12px 16px;cursor:pointer;font-size:13px;display:flex;align-items:center;gap:10px}
         .status-opt:hover{background:#f9fafb}
         .status-dot{width:10px;height:10px;border-radius:50%}
-        .assignee-cell{position:relative;min-width:0;overflow:hidden;max-width:100%}
-        .assignee-badge{display:inline-flex;align-items:center;gap:6px;padding:5px 10px;border-radius:25px;font-size:11px;cursor:pointer;font-weight:600;max-width:100%;transition:all 0.15s;border:2px solid transparent;box-shadow:0 2px 6px rgba(0,0,0,0.1);overflow:hidden}
+        .assignee-cell{position:relative}
+        .assignee-badge{display:inline-flex;align-items:center;gap:6px;padding:5px 10px;border-radius:25px;font-size:11px;cursor:pointer;font-weight:600;max-width:100%;transition:all 0.15s;border:2px solid transparent;box-shadow:0 2px 6px rgba(0,0,0,0.1)}
         .assignee-badge:hover{transform:scale(1.03);box-shadow:0 4px 12px rgba(0,0,0,0.15)}
         .assignee-badge .init{width:24px;height:24px;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:10px;font-weight:700;color:#fff;flex-shrink:0;box-shadow:0 2px 6px rgba(0,0,0,0.2)}
         .assignee-badge .name{overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
@@ -96,8 +96,8 @@
         .assignee-opt{padding:12px 16px;cursor:pointer;font-size:13px;display:flex;align-items:center;gap:12px}
         .assignee-opt:hover{background:#f9fafb}
         .assignee-opt .avatar{width:32px;height:32px;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:12px;font-weight:700;color:#fff}
-        .premium-cell{text-align:right;min-width:0;overflow:hidden}
-        .premium-main{font-size:14px;font-weight:800;color:#1e293b;white-space:nowrap}
+        .premium-cell{text-align:right}
+        .premium-main{font-size:14px;font-weight:800;color:#1e293b}
         .premium-exp{font-size:12px;color:#94a3b8;text-decoration:line-through}
         .premium-chg{font-size:12px;margin-top:2px;font-weight:700}
         .premium-chg.up{color:#dc2626}
@@ -140,7 +140,7 @@
         .toast.show{display:block}
         .toast.ok{background:#059669}
         .toast.err{background:#dc2626}
-        @media(max-width:1400px){.grid-header,.grid-row{grid-template-columns:24% 7% 9% 9% 12% 14% 11% 38px}.grid-header.billing,.grid-row.billing{grid-template-columns:21% 6% 8% 8% 10% 10% 12% 10% 38px}}
+        @media(max-width:1400px){.grid-header,.grid-row{grid-template-columns:minmax(180px,1.5fr) 70px 85px 85px 120px 140px 100px 38px}.grid-header.billing,.grid-row.billing{grid-template-columns:minmax(160px,1.5fr) 70px 80px 80px 95px 95px 130px 95px 38px}}
         @media(max-width:1200px){.stats{grid-template-columns:repeat(3,1fr)}}
     </style>
 </head>
